--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       coverpage: false,
       executeScript: true,
       loadSidebar: true,
+      coverpage: true,
       loadNavbar: true,
       mergeNavbar: true,
       maxLevel: 4,
@@ -49,7 +50,7 @@
           highlightColor : '#d22778',
           sidebarSublink : '#b4b4b4',
           codeTypeColor : '#ffffff',
-          coverBackground : 'linear-gradient(to left bottom, hsl(118, 100%, 85%) 0%,hsl(181, 100%, 85%) 100%)',
+          coverBackground : 'linear-gradient(to left bottom, hsl(118, 100%, 15%) 0%,hsl(181, 100%, 15%) 100%)',
           toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/sun.svg)'
         },
         light: {
