--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           highlightColor : '#d22778',
           sidebarSublink : '#b4b4b4',
           codeTypeColor : '#ffffff',
-          coverBackground : 'linear-gradient(to left bottom, hsl(118, 100%, 15%) 0%,hsl(181, 100%, 15%) 100%)',
+          coverBackground : 'linear-gradient(to bottom, hsl(298, 100%, 15%) 95%,hsl(222, 8%, 23%) 100%)',
           toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/sun.svg)'
         },
         light: {
@@ -65,7 +65,7 @@
           highlightColor : '#d22778',
           sidebarSublink : '#505d6b',
           codeTypeColor : '#091a28',
-          coverBackground : 'linear-gradient(to left bottom, hsl(118, 100%, 85%) 0%,hsl(181, 100%, 85%) 100%)',
+          coverBackground : 'linear-gradient(to bottom, hsl(118, 100%, 75%) 95%,hsl(0, 0%, 97%) 100%)',
           toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/moon.svg)'
         }
       },
