--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
         '/.*/_sidebar.md': '/_sidebar.md'
       },
       auto2top: true,
-      coverpage: false,
       executeScript: true,
       loadSidebar: true,
       coverpage: true,
-      loadNavbar: true,
-      mergeNavbar: true,
+      loadNavbar: false,
+      mergeNavbar: false,
       maxLevel: 4,
       subMaxLevel: 2,
       sidebarDisplayLevel: 1,
