_cover and index update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       subMaxLevel: 2,
       sidebarDisplayLevel: 1,
       relativePath: false,
-      name: 'Brenns API docs',
+      name: 'BrennFuchS API Docs',
       darklightTheme: {
         siteFont : "PT Sans",
         defaultTheme : 'dark',
@@ -50,7 +50,7 @@
           sidebarSublink : '#b4b4b4',
           codeTypeColor : '#ffffff',
           coverBackground : 'linear-gradient(to bottom, hsl(25, 100%, 35%) 95%,hsl(222, 8%, 23%) 100%)',
-          toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/sun.svg)'
+          toogleImage : 'url(https://cdn.discordapp.com/attachments/789443318852354058/838471116183437352/sun.png)'
         },
         light: {
           accent: '#3ca486',
@@ -64,8 +64,8 @@
           highlightColor : '#d22778',
           sidebarSublink : '#505d6b',
           codeTypeColor : '#091a28',
-          coverBackground : 'linear-gradient(to bottom, hsl(25, 100%, 65%) 95%,hsl(0, 0%, 97%) 100%)',
-          toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/moon.svg)'
+          coverBackground : 'linear-gradient(to bottom, hsl(40, 100%, 64%) 95%,hsl(0, 0%, 97%) 100%)',
+          toogleImage : 'url(https://cdn.discordapp.com/attachments/789443318852354058/838471118750875698/moon.png)'
         }
       },
       plugins: [
