added website icon, updated index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="BrennFuchS APIs Documentation">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css" title="docsify-darklight-theme" type="text/css"/>
+  <link rel="icon" href="./_media/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/prism.css"/>
   <script src="//cdn.jsdelivr.net/npm/docsify-plugin-carbon@1.0.1/index.min.js"></script>
@@ -30,7 +31,8 @@
       subMaxLevel: 2,
       sidebarDisplayLevel: 1,
       relativePath: false,
-      name: 'BrennFuchS API Docs',
+      name: '<img src="./_media/favicon.ico" height="20vw" style="vertical-align: initial; padding-top: 0.1em;"> BrennFuchS API Docs',
+      repo: 'https://github.com/BrennFuchS-API/docs',
       darklightTheme: {
         siteFont : "PT Sans",
         defaultTheme : 'dark',
