--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       maxLevel: 4,
       subMaxLevel: 2,
       sidebarDisplayLevel: 1,
+      notFoundPage: "_404.md",
       relativePath: false,
       name: '<img src="./_media/favicon.ico" height="20vw" style="vertical-align: initial; padding-top: 0.1em;"> BrennFuchS API Docs',
       repo: 'https://github.com/BrennFuchS-API/docs',
